k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: career-coach-prod
  labels:
    name: career-coach-prod
